Closed Bug 959585 Opened 12 years ago Closed 11 years ago

contentEditable span or div onblur alert can't be clicked

Categories

(Core :: DOM: Core & HTML, defect)

28 Branch
x86_64
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29
blocking-b2g 1.3+
Tracking Status
firefox27 --- unaffected
firefox28 + fixed
firefox29 + fixed
b2g18 --- unaffected
b2g-v1.1hd --- unaffected
b2g-v1.2 --- wontfix
b2g-v1.3 --- fixed
b2g-v1.3T --- fixed
b2g-v1.4 --- fixed

People

(Reporter: tmptgr, Assigned: smaug)

References

Details

(Keywords: regression, Whiteboard: [good first verify])

Attachments

(2 files, 1 obsolete file)

Attached file onblur_alert_test.html
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:28.0) Gecko/20100101 Firefox/28.0 (Beta/Release) Build ID: 20140113004002 Steps to reproduce: Run attached testcase in Aurora and Chrome. Actual results: Aurora fails. Chrome wins. Expected results: Both win.
The testcase works here; I think NoScript is causing problems again.
Status: UNCONFIRMED → RESOLVED
Closed: 12 years ago
Resolution: --- → INVALID
Restarting with all addons disabled, the testcase shows an alert, but i can't click the OK button on it. Pressing Esc does dismiss it.
Status: RESOLVED → UNCONFIRMED
Resolution: INVALID → ---
Summary: contentEditable span or div onblur doesn't get called → contentEditable span or div onblur alert can't be clicked
STR 1. Open attached testcase 2. Click two 3. Click one 4. Attempt to click OK button in alert box Regression window(m-i) Good: http://hg.mozilla.org/integration/mozilla-inbound/rev/cbe04dbc2bd6 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:29.0) Gecko/20100101 Firefox/29.0 ID:20131217160921 Bad: http://hg.mozilla.org/integration/mozilla-inbound/rev/08dc60299942 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:29.0) Gecko/20100101 Firefox/29.0 ID:20131217161358 Pushlog: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=cbe04dbc2bd6&tochange=08dc60299942 Regresseed by: 08dc60299942 Blake Kaplan — Bug 933483 - Don't fire events (and especially request animation frame events) when we're in a modal dialog. r=smaug
Blocks: 933483
Status: UNCONFIRMED → NEW
Component: Untriaged → DMD
Ever confirmed: true
Keywords: regression
Product: Firefox → Core
Component: DMD → DOM
I can also reproduce the problem on Linux.
OS: Windows 7 → All
Blake, can you please take a look? Thanks!
Assignee: nobody → mrbkap
Tracking for website breakage risk.
Attached patch clear capturing content (obsolete) — Splinter Review
Assignee: mrbkap → bugs
Attachment #8366306 - Flags: review?(mrbkap)
Attachment #8366306 - Flags: feedback?(enndeakin)
Attachment #8366306 - Flags: review?(mrbkap) → review+
Comment on attachment 8366306 [details] [diff] [review] clear capturing content SetCapturingContent is static, so you don't need to get the presshell.
Attachment #8366306 - Flags: feedback?(enndeakin) → feedback+
Ah, yes. Shouldn't have copied that part from above.
Flags: needinfo?(mrbkap)
The bug that caused this is koi+. Could we get this to all relevant trees?
Flags: needinfo?(mrbkap) → needinfo?(sheriffs)
That's not at all a decision for sheriffs to make.
blocking-b2g: --- → koi?
Flags: needinfo?(sheriffs) → needinfo?(release-mgmt)
Comment on attachment 8366306 [details] [diff] [review] clear capturing content Obsoleting in favor of the patch that was checked in. Olli, I believe that this will need to apply on Aurora and b2g26_v1_2.
Attachment #8366306 - Attachment is obsolete: true
We're no longer maintaining 1.2, so moving to 1.3 for triage.
blocking-b2g: koi? → 1.3?
Status: NEW → RESOLVED
Closed: 12 years ago11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
blocking-b2g: 1.3? → 1.3+
1.3+ for compatibility of website issue
https://hg.mozilla.org/releases/mozilla-aurora/rev/95af3eb13175 My understanding was that we're still taking some patches for v1.2 if they affect partner qualification? I guess we don't expect this bug to significantly affect that?
(In reply to Ryan VanderMeulen [:RyanVM UTC-5] from comment #18) > https://hg.mozilla.org/releases/mozilla-aurora/rev/95af3eb13175 > > My understanding was that we're still taking some patches for v1.2 if they > affect partner qualification? I guess we don't expect this bug to > significantly affect that? To my understanding, we don't have any partners lined up using our 1.2 branch right now.
From a relman perspective we will not be picking up the issue in 1.2.
Flags: needinfo?(release-mgmt)
Whiteboard: [good first verify]
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: