Bug 959585 - Clear capturing content before entering modal state. r=mrbkap, a=1.3+